gccida/g0/expand_preferences
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_preferences/src/global.c:1327:42: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v0 = **( _WORD **)&insn[2] == 47 ? ( rtx)insn[2] : single_set_2( insn, *( rtx *)&insn[2]); 
                                         ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_preferences/src/global.c:1332:53: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( link = insn[3].fld[0].rtx; link; link = ( rtx)link[1] ) 
                                                    ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_preferences/src/global.c:1344:26: error: invalid operands to binary expression ('long long' and 'struct rtx_def')
if ( link->fld[0].rtwint == v0[1] ) 
     ~~~~~~~~~~~~~~~~~~~ ^  ~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_preferences/src/global.c:1346:1: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0[( __int64)a1].hard_reg_copy_preferences |= allocno_0[( __int64)a2].hard_reg_copy_preferences; 
^~~~~~~~~
allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_preferences/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_preferences/src/global.c:1346:54: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0[( __int64)a1].hard_reg_copy_preferences |= allocno_0[( __int64)a2].hard_reg_copy_preferences; 
                                                     ^~~~~~~~~
                                                     allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_preferences/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_preferences/src/global.c:1347:1: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0[( __int64)a2].hard_reg_copy_preferences |= allocno_0[( __int64)a1].hard_reg_copy_preferences; 
^~~~~~~~~
allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_preferences/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_preferences/src/global.c:1347:54: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0[( __int64)a2].hard_reg_copy_preferences |= allocno_0[( __int64)a1].hard_reg_copy_preferences; 
                                                     ^~~~~~~~~
                                                     allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_preferences/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_preferences/src/global.c:1349:1: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0[( __int64)a1].hard_reg_preferences |= allocno_0[( __int64)a2].hard_reg_preferences; 
^~~~~~~~~
allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_preferences/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_preferences/src/global.c:1349:49: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0[( __int64)a1].hard_reg_preferences |= allocno_0[( __int64)a2].hard_reg_preferences; 
                                                ^~~~~~~~~
                                                allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_preferences/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_preferences/src/global.c:1350:1: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0[( __int64)a2].hard_reg_preferences |= allocno_0[( __int64)a1].hard_reg_preferences; 
^~~~~~~~~
allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_preferences/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_preferences/src/global.c:1350:49: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0[( __int64)a2].hard_reg_preferences |= allocno_0[( __int64)a1].hard_reg_preferences; 
                                                ^~~~~~~~~
                                                allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_preferences/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_preferences/src/global.c:1351:1: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0[( __int64)a1].hard_reg_full_preferences |= allocno_0[( __int64)a2].hard_reg_full_preferences; 
^~~~~~~~~
allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_preferences/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_preferences/src/global.c:1351:54: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0[( __int64)a1].hard_reg_full_preferences |= allocno_0[( __int64)a2].hard_reg_full_preferences; 
                                                     ^~~~~~~~~
                                                     allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_preferences/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_preferences/src/global.c:1352:1: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0[( __int64)a2].hard_reg_full_preferences |= allocno_0[( __int64)a1].hard_reg_full_preferences; 
^~~~~~~~~
allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_preferences/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_preferences/src/global.c:1352:54: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0[( __int64)a2].hard_reg_full_preferences |= allocno_0[( __int64)a1].hard_reg_full_preferences; 
                                                     ^~~~~~~~~
                                                     allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_preferences/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
15 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_preferences/src/obj/global.o] Error 1
